# CS327-Spring2016-Proj2

./: CMakeLists.txt  Makefile  README  Readme.md
src/: data_chunk_t.cpp  data_chunk_t.h  fmt_chunk_t.cpp  fmt_chunk_t.h  main.cpp  riff_type_chunk_t.cpp  riff_type_chunk_t.h  wav.cpp  wav.h
